--- a/home.html
+++ b/home.html
@@ -4,117 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home - Software Developer Portfolio</title>
-    <style>
-        :root {
-            --primary-color: #DAA520; /* Golden Pink */
-            --secondary-color: #FFC0CB; /* Rose Pink */
-            --accent-color: #FF69B4; /* Hot Pink */
-            --background-color: #FFF5F7;
-            --text-color: #333333;
-            --font-family: 'Arial', sans-serif;
-        }
-
-        body {
-            margin: 0;
-            padding: 0;
-            font-family: var(--font-family);
-            background-image:#FFC5CB;
-            background-size: cover;
-            background-attachment: fixed;
-            color: var(--text-color);
-        }
-
-        header {
-            background: linear-gradient(to right, var(--primary-color), var(--accent-color));
-            color: var(--secondary-color);
-            padding: 1rem;
-            text-align: center;
-        }
-
-        header h1 {
-            margin: 0;
-            font-size: 3rem;
-            animation: fadeIn 2s ease;
-        }
-
-        @keyframes fadeIn {
-            from { opacity: 0; }
-            to { opacity: 1; }
-        }
-
-        nav {
-            background-color: var(--secondary-color);
-            padding: 1rem;
-            display: flex;
-            justify-content: center;
-            gap: 2rem;
-            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-            position: sticky;
-            top: 0;
-            z-index: 1000;
-        }
-
-        nav a {
-            text-decoration: none;
-            color: var(--text-color);
-            font-weight: bold;
-            font-size: 1.2rem;
-        }
-
-        nav a:hover {
-            color: var(--primary-color);
-        }
-
-        main {
-            padding: 2rem;
-            text-align: center;
-        }
-
-        main h2 {
-            color: var(--primary-color);
-            font-size: 2.5rem;
-            margin-bottom: 1.5rem;
-        }
-
-        .content {
-            max-width: 800px;
-            margin: 0 auto;
-            padding: 2rem;
-            background-color: rgba(255, 255, 255, 0.8);
-            border-radius: 12px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-        }
-
-        .popup {
-            position: fixed;
-            bottom: 20px;
-            right: 20px;
-            background-color: var(--primary-color);
-            color: var(--secondary-color);
-            padding: 1rem;
-            border-radius: 50%;
-            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-            animation: popupFade 5s infinite;
-            cursor: pointer;
-        }
-
-        @keyframes popupFade {
-            0%, 100% { opacity: 0; transform: scale(0.9); }
-            50% { opacity: 1; transform: scale(1); }
-        }
-
-        footer {
-            background-color: var(--primary-color);
-            color: var(--secondary-color);
-            text-align: center;
-            padding: 1.5rem;
-            margin-top: 2rem;
-        }
-
-        footer p {
-            margin: 0;
-        }
-    </style>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
