--- a/projects.html
+++ b/projects.html
@@ -4,125 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Projects - Advanced HTML Series</title>
-    <style>
-        :root {
-            --primary-color: #DAA520; /* Golden Pink */
-            --secondary-color: #FFC0CB; /* Rose Pink */
-            --accent-color: #FF69B4; /* Hot Pink */
-            --background-color: #FFF5F7;
-            --text-color: #333333;
-            --font-family: 'Arial', sans-serif;
-        }
-
-        body {
-            margin: 0;
-            padding: 0;
-            font-family: var(--font-family);
-            background-color: #FFC5CB;
-            background-size: cover;
-            background-attachment: fixed;
-            color: var(--text-color);
-        }
-
-        header {
-            background: linear-gradient(to right, var(--primary-color), var(--accent-color));
-            color: var(--secondary-color);
-            padding: 1rem;
-            text-align: center;
-        }
-
-        header h1 {
-            margin: 0;
-            font-size: 3rem;
-            animation: fadeIn 2s ease;
-        }
-
-        @keyframes fadeIn {
-            from { opacity: 0; }
-            to { opacity: 1; }
-        }
-
-        nav {
-            background-color: var(--secondary-color);
-            padding: 1rem;
-            display: flex;
-            justify-content: center;
-            gap: 2rem;
-            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-        }
-
-        nav a {
-            text-decoration: none;
-            color: var(--text-color);
-            font-weight: bold;
-            font-size: 1.2rem;
-        }
-
-        nav a:hover {
-            color: var(--primary-color);
-        }
-
-        main {
-            padding: 2rem;
-            text-align: center;
-        }
-
-        main h2 {
-            color: var(--primary-color);
-            font-size: 2.5rem;
-            margin-bottom: 1.5rem;
-        }
-
-        .project-grid {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-            gap: 1.5rem;
-            padding: 2rem;
-            margin: 0 auto;
-            max-width: 1200px;
-        }
-
-        .project-card {
-            background-color: var(--secondary-color);
-            border: 2px solid var(--primary-color);
-            border-radius: 12px;
-            padding: 1rem;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-            transition: transform 0.3s ease;
-        }
-
-        .project-card:hover {
-            transform: translateY(-10px);
-        }
-
-        .project-card img {
-            width: 100%;
-            border-radius: 8px;
-            margin-bottom: 1rem;
-        }
-
-        .project-card h3 {
-            color: var(--primary-color);
-            margin: 0.5rem 0;
-        }
-
-        .project-card p {
-            color: var(--text-color);
-            line-height: 1.6;
-        }
-
-        footer {
-            background-color: var(--primary-color);
-            color: var(--secondary-color);
-            text-align: center;
-            padding: 1.5rem;
-            margin-top: 2rem;
-        }
-
-        footer p {
-            margin: 0;
-        }
-    </style>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
